# TTS_ofline_modul-Silero-v5-

./: README.md  pyproject.toml  requirements.txt
TTS_ofline_modul-Silero-v5--main/: README.md  pyproject.toml
TTS_ofline_modul-Silero-v5--main/src/silero_offline_tts.egg-info/: SOURCES.txt  requires.txt
TTS_ofline_modul-Silero-v5--main/src/silero_tts/: __init__.py  audio.py  cli.py  config.py
examples/: main.py  quality_benchmark.py
src/silero_offline_tts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/silero_tts/: __main__.py  cli.py  core.py  utils.py
tests/: test_quality_and_performance.py
